--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,8 @@ build:
     - $(aws ecr get-login --no-include-email --region eu-central-1)
     - docker build -t $DOCKER_REGISTRY:$CI_COMMIT_TAG .
     - docker push $DOCKER_REGISTRY:$CI_COMMIT_TAG
-
+  only:
+    - tags
 
 
 # # Depends on CLOUDSDK_CORE_PROJECT, CLOUDSDK_CONTAINER_CLUSTER, and CLOUDSDK_COMPUTE_ZONE being set
