--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,20 @@
-image: docker:latest
-services:
-  - docker:dind
-
 stages:
   - build
   - staging
   - production
 
-variables:
-  DOCKER_DRIVER: overlay
-  DOCKER_HOST: tcp://localhost:2375
-  DOCKER_REGISTRY: 652891063711.dkr.ecr.eu-central-1.amazonaws.com/cron
-
-before_script:
-  - apk add --no-cache curl jq python py-pip
-  - pip install awscli
-
 build:
   stage: build
+  image: docker:dind
+  services:
+    - docker:dind
+  variables:
+    DOCKER_DRIVER: overlay
+    DOCKER_HOST: tcp://localhost:2375
+    DOCKER_REGISTRY: 652891063711.dkr.ecr.eu-central-1.amazonaws.com/cron
+  before_script:
+    - apk add --no-cache curl jq python py-pip
+    - pip install awscli
   script:
     - $(aws ecr get-login --no-include-email --region eu-central-1)
     - docker build -t $DOCKER_REGISTRY:$CI_COMMIT_TAG .
