--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,11 +27,16 @@ build:
   only:
     - tags
 
+.kubectl_config: &kubectl_config
+  - aws eks --region eu-central-1 update-kubeconfig --name goonj-v2
+
 staging:
+  image: docker.io/sulemanhasib43/eks:latest
   stage: staging
   variables:
     K8S_NAMESPACE: staging
   before_script:
+    - *kubectl_config
     - kubectl version
   script:
     - kubectl -n $K8S_NAMESPACE patch deployment $DEPLOYMENT_NAME -p '{"spec":{"template":{"spec":{"containers":[{"name":"'"$DEPLOYMENT_NAME"'","image":"'"$DOCKER_REGISTRY:$CI_COMMIT_TAG"'"}]}}}}'
