--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,10 +35,9 @@ staging:
   stage: staging
   variables:
     K8S_NAMESPACE: staging
-  before_script:
-    - *kubectl_config
-    - kubectl version
+  before_script: *kubectl_config
   script:
+    - kubectl version
     - kubectl -n $K8S_NAMESPACE patch deployment $DEPLOYMENT_NAME -p '{"spec":{"template":{"spec":{"containers":[{"name":"'"$DEPLOYMENT_NAME"'","image":"'"$DOCKER_REGISTRY:$CI_COMMIT_TAG"'"}]}}}}'
 
 # # Depends on CLOUDSDK_CORE_PROJECT, CLOUDSDK_CONTAINER_CLUSTER, and CLOUDSDK_COMPUTE_ZONE being set
