--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,19 @@ staging:
   only:
     - tags
 
+
+production:
+  image: docker.io/sulemanhasib43/eks:latest
+  stage: production
+  variables:
+    K8S_NAMESPACE: production
+  before_script: *kubectl_config
+  script:
+    - kubectl version
+    - kubectl -n $K8S_NAMESPACE patch deployment $DEPLOYMENT_NAME -p '{"spec":{"template":{"spec":{"containers":[{"name":"'"$DEPLOYMENT_NAME"'","image":"'"$DOCKER_REGISTRY:$CI_COMMIT_TAG"'"}]}}}}'
+  only:
+    - tags
+    - master
 # # Depends on CLOUDSDK_CORE_PROJECT, CLOUDSDK_CONTAINER_CLUSTER, and CLOUDSDK_COMPUTE_ZONE being set
 # .gcloud: &gcloud
 #   - echo $GCLOUD_SERVICE_KEY | base64 --decode -i > ~/gcloud-service-key.json
